# advent-of-code-cpp

./: .gitignore  CMakeLists.txt  README.md  new_day.sh  run.sh  run_all.sh
include/: utils.hpp
src/2025/day01/: input.hpp  main.cpp
src/2025/day02/: input.hpp  main.cpp
src/2025/day03/: input.hpp  main.cpp
src/2025/day04/: input.hpp  main.cpp
src/2025/day05/: input.hpp  main.cpp
template/: input.hpp  main.cpp
